# pyMultiFit

./: .gitattributes  .gitignore  .pylintrc  .readthedocs.yml  .tokeignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  environment.yaml  environment[dev].yaml  main.py  noxfile.py  pyproject.toml  requirements.txt  requirements[dev].txt  rough_docstring.txt  ruff.toml  setup.cfg  setup.py  update_requirements_doc.py  versions.json
.github/: dependabot.yml
.github/workflows/: code_coverage.yml  draft-pdf.yml  file_linting.yml  publish_pymultifit.yml  pylint.yml
benchmarks/: CDF_multifit_df.csv  CDF_multifit_variable_df.csv  CDF_scipy_df.csv  CDF_scipy_variable_df.csv  PDF_multifit_df.csv  PDF_multifit_variable_df.csv  PDF_scipy_df.csv  PDF_scipy_variable_df.csv  __init__.py  accuracy.ipynb  arcSine_cdf.py  arcSine_logcdf.py  arcSine_logpdf.py  arcSine_pdf.py  functions.py  speed.ipynb  summary.ipynb
docs/: __init__.py  distributions.md  fitters.md  generators.md
docs/source/: _bm_accuracy.nblink  _bm_speed.nblink  _bm_summary.nblink  _constants.rst  _distributions.rst  _error_handling.rst  _fitters.rst  _generators.rst  api_index.rst  baseDistributionMethods.rst  basics.rst  basics1.nblink  basics2.nblink  basics3.nblink  basics4.nblink  bench.rst  benchmarks.rst  conf.py  exploration1.nblink  exploration2.nblink  fitting_mixture_model.nblink  generating_n_model_data.nblink  index.rst  installation.rst  introduction.rst  pymultifit.distributions.backend.rst  pymultifit.distributions.rst  pymultifit.fitters.backend.rst  pymultifit.fitters.rst  pymultifit.generators.rst  pymultifit.rst  tutorials.rst
docs/source/_static/: custom.css  inherited_methods.csv
docs/source/basic_examples/: basics1.nblink  basics2.nblink  basics3.nblink  basics4.nblink
docs/source/benchmarks/: _bm_accuracy.nblink  _bm_speed.nblink  _bm_summary.nblink  benchmarks.rst
docs/source/distributions/: _distributions.rst  arcSine_d.rst  baseDistribution.rst  betaPrime_d.rst  beta_d.rst  chiSquare_d.rst  cubic.rst  exponential_d.rst  foldedNormal_d.rst  gamma_d.rst  gamma_sr_d.rst  gamma_ss_d.rst  gaussian_d.rst  genNorm_d.rst  halfNormal_d.rst  laplace_d.rst  line.rst  logNormal_d.rst  others.rst  polynomial.rst  polynomial_d.rst  quadratic.rst  scaledInvChiSquare_d.rst  skewNormal_d.rst  uniform_d.rst  utilities_d.rst
docs/source/exploratory_examples/: exploration1.nblink  exploration2.nblink  exploration3.nblink
docs/source/fitters/: _fitters.rst  baseFitter.rst  chiSquare_f.rst  exponential_f.rst  foldedNormal_f.rst  gamma_f.rst  gamma_sr_f.rst  gamma_ss_f.rst  gaussian_f.rst  halfNormal_f.rst  laplace_f.rst  logNormal_f.rst  mixed_f.rst  skewNormal_f.rst  utilities_f.rst
docs/source/formulae/: formulae.rst
docs/source/generators/: _generators.rst  generators.rst
docs/source/others/: _constants.rst
docs/source/py_shenanigans/: __init__.py  _distribution_api_runner.py  _distribution_api_template.py
examples/: __init__.py  gamma_sr.py  gaussian.py  gaussian_fit.py  laplace.py  log_normal.py  log_normal1.py  log_normal2.py  mGaussian1.py  mixed.py  multi_gaussian_fit.py  skew_normal.py  skewed_normal.py
examples/basic/: __init__.py  arcSine.py  beta1.py  beta2.py  betaPrime.py  chisquare.py  expon.py  foldednorm.py  gammaSR_.py  gammaSS_.py  gamma_.py  gaussian.py  gennorm.py  halfnorm.py  laplace.py  skewnormal.py  uniform.py
inst/: mg_fitter.py  mixed_paper.py  paper.bib  paper.md
paper/: distribution_.py  distribution_test.py  paper.md
sphinx_docs/source/: _distributions.rst  _fitters.rst  _generators.rst  api_index.rst  conf.py  generating_data.nblink  generating_mixture_model_data.nblink  generating_n_model_data.nblink  index.rst  installation.rst  modules.rst  pymultifit.distributions.backend.rst  pymultifit.distributions.rst  pymultifit.fitters.backend.rst  pymultifit.fitters.rst  pymultifit.rst  substitutions.rst  tutorials.rst
sphinx_docs/source/_static/: custom.css
sphinx_docs/source/api/: index.rst
sphinx_docs/source/distributions/: arcSine_d.rst  beta_d.rst  chiSquare_d.rst  exponential_d.rst  foldedNormal_d.rst  gamma_sr_d.rst  gamma_ss_d.rst  gaussian_d.rst  halfNormal_d.rst  laplace_d.rst  logNormal_d.rst  skewNormal_d.rst  uniform_d.rst
sphinx_docs/source/py_shenanigans/: _distribution_api_runner.py  _distribution_api_template.py
src/: __init__.py
src/pymultifit/: SkNorm_f.py  __init__.py  gaussian.py  gaussian_f.py  laplace_f.py  logNorm_f.py  mixed.py  skewNorm_f.py  version.py
src/pymultifit/backend/: __init__.py  multiFitter.py  utilities.py
src/pymultifit/benchmark_functions/: __init__.py  functions.py
src/pymultifit/distributions/: __init__.py  arcSine_d.py  betaPrime_d.py  beta_d.py  chiSquare_d.py  chisq_d.py  exponential_d.py  foldedHalfNormal_d.py  foldedNormal_d.py  gamma_d.py  gaussian_d.py  halfNormal_d.py  johnsonSU_d.py  laplace_d.py  logNorm_d.py  logNormal_d.py  multi_generators.py  norris_d.py  others.py  polynomials.py  powerLaw_d.py  scaledInvChiSquare_d.py  skewNorm_d.py  skewNormal_d.py  uniform_d.py  utilities.py  utilities_d.py  utilities_d.pyi
src/pymultifit/fitters/: __init__.py  chiSquare_f.py  (+18 more)
src/tests/: __init__.py  test_gaussian_d.py
tutorials/: 001__distribution_class.ipynb  001__generating_data.ipynb  002__generating_n_model_data.ipynb  002__generator_class.ipynb  003__fitter_module.ipynb  004__fitter_module2.ipynb  exploration1.ipynb  exploration2.ipynb  exploration3.ipynb  fitting_mixture_model.ipynb  generating_data.ipynb  generating_mixture_model_data.ipynb  generating_n_model_data.ipynb  spec-0293-51994-0078.fits
tutorials/SDSS/: sdss_.py
tuts/: __init__.py  generating_data.ipynb
(+53 files in other folders)
