[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymultifit"
description = "A library to fit data with multiple fitters."
authors = [{ name = "Syed Ali Mohsin Bukhari", email = "syedali.b@outlook.com" }]

readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license-files = ["LICENSE"]
dynamic = ["version"]
dependencies = ["numpy<2.1.0", "matplotlib", "scipy", "custom-inherit", "mpyez"]
keywords = ["fitting", "multi-modal", "gaussian", "lognormal", "skew", "curve fitting", "scipy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics"
]

[tool.setuptools.dynamic]
version = { attr = "pymultifit.version.__version__" }

[project.optional-dependencies]
dev = [
    "pytest",
    "seaborn",
    "pandas",
    "statsmodels",
    "astropy",
    "jupyter",
    "notebook",
    "build",
    "memory_profiler",
    "sphinx",
    "sphinx-rtd-theme",
    "pydata-sphinx-theme",
    "sphinx-copybutton",
    "sphinxcontrib-napoleon",
    "numpydoc",
    "nbsphinx",
    "nbsphinx-link",
    "sphinx-gallery",
    "sphinx-autobuild",
    "black",
    "mypy"
]

[project.urls]
Homepage = "https://readthedocs.pymultifit.com"
Issues = "https://github.com/syedalimohsinbukhari/pymultifit/issues"
Repository = "https://github.com/syedalimohsinbukhari/pyMultiFit/"


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["examples", "*tests*"]