[metadata]
name = pymultifit
version = 0.1.1
url = https://github.com/syedalimohsinbukhari/pyMultiFit
author = Syed Ali Mohsin Bukhari
author_email = syedali.b@outlook.com
license = MIT
license_files = LICENSE
description = ''
long_description = file: README.md
long_description_content_type = "text/markdown"

[options]
package_dir =
    = src

packages = find:
python_requires = ">= 3.9"

install_requires =
    setuptools==70.3.0
    numpy==1.26.4
    matplotlib==3.9.1
    scipy==1.13.1

[options.packages.find]
where = src

classifiers =
    License :: OSI Approved :: CC License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
